### Change according to your package's requirements ------------------
[options]
python_requires = ~=3.6
setup_requires =
    wheel>=0.34.2
    setuptools>=44.1.0
install_requires =
    Click>=7.1.1
    beautifulsoup4>=4.9.1
    Flask>=1.1.2
    PyYAML>=5.3.1
    requests>=2.25.0
    waitress>=1.4.4
    websockets>=8.1
### ------------------------------------------------------------------



### Keep the same structure, Should NOT be changed
### Remember - create __init__.py in each directory that is a package
# [options] <--- we're here
packages = find:
package_dir =
    =src
include_package_data = True

[options.packages.find]
where = src
### ------------------------------------------------------------------



### Relevant for packages that can be executed in command-line
### If your package does NOT support command-line, remove this section
[options.entry_points]
console_scripts =
    frigga = frigga.__main__:main
### ------------------------------------------------------------------



### Change according to your package's metadata ----------------------
[metadata]
name = frigga
author = Meir Gabay
license = MIT
author_email = unfor19@gmail.com
url = https://github.com/unfor19/frigga
project_urls = 
    Documentation = https://github.com/unfor19/frigga/wiki
### ------------------------------------------------------------------

### SEO details as will appear in PyPi -------------------------------
# [metadata] <--- we're here
description = Scrape only relevant metrics in Prometheus, according to your Grafana dashboards
long_description_content_type = text/markdown
long_description = file: README.md
keywords =
    prometheus
    grafana
    dashboard
    metrics
    monitor
    cloud
    devops
    cli
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
### ------------------------------------------------------------------